<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.octacoresoftwares.kudifx.ui.MainActivityViewModel" />

        <variable
            name="presenter"
            type="com.octacoresoftwares.kudifx.ui.MainActivityPresenter" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="64dp">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:onButtonChecked="@{presenter.buttonGroupListener}">

                <Button
                    android:id="@+id/thirty_days"
                    style="@style/AppTheme.TextButton.Group.Single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past_30_days" />

                <Button
                    android:id="@+id/ninety_days"
                    style="@style/AppTheme.TextButton.Group.Single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past_90_days" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="0dp"
                android:layout_height="360dp"
                app:entries="@{vm.entries}"
                app:labels="@{vm.labels}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/get_rate_alerts_straight_to_your_email_inbox"
                android:textAppearance="@style/TextAppearanceBody1"
                android:textColor="@color/color_grey1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_chart" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>